PR 20135: Fixing command bar overflow.
 - Fixing command bar overflow.

http://fabricreact.azurewebsites.net/fabric-react/Davids-MBP-2-dzearing-commandbar-fix/

--- a/src/components/CommandBar/CommandBar.scss
+++ b/src/components/CommandBar/CommandBar.scss
@@ -55,8 +55,10 @@ $SearchBox-iconWrapperWidth: $SearchBox-widthLgCollapsed - ($SearchBox-sidePaddi
 
 .ms-CommandBar-primaryCommands {
   position: absolute;
-  overflow-x: hidden;
+  overflow: hidden;
   display: inline;
+  vertical-align: top;
+  line-height: $CommandBar-height;
   margin: 0 24px;
 }
 
